daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N17_insufficient_domain_count/h1.hex
3a57e14b18e8beb47d6b6de25e51a1f62bf2a0f6fb0df14add79f50c621629749079a66178763b813e578e076039be56950441b56c4d52d0f5e44a2fe7d3ec67
